# Battery-Alert

./: LICENSE  README.md  pyproject.toml  setup.py
.pybuild/cpython3_3.10/: .pydistutils.cfg
battery_alert/: cli.py  core.py
debian/: battery-alert.install  changelog  control  copyright  debhelper-build-stamp
