[tool.poetry]
name = "battery-alert"
version = "0.1.0"
description = ""
authors = ["Felipe Castro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^6.1.0"
plyer = "^2.1.0"
typer = "^0.15.1"

[tool.poetry.scripts]
battery-alert = "battery_alert.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
